acknowledge security researcher
- acknowledge Artem Smotrakov for bringing our attention to a potential
  timing attack:
  "alphagov/pay-direct-debit-connector project, and noticed that
  GoCardlessWebhookVerifier uses StringUtils.equals() for MAC
  verification. StringUtils.equals() doesn't implement a constant-time
  algorithm for comparing inputs. As a result, an attacker may be able
  to run a timing attack that can forge a valid Webhook signature for
  an arbitrary body."

--- a/thanks.txt
+++ b/thanks.txt
@@ -2,3 +2,4 @@
 # [yyyy-mm-dd] Name -- description
 
 [2020-02-11] Jonathan Leitschuh -- potential MITM using HTTP to resolve some GOV.UK Pay Maven dependencies
+[2021-07-21] Artem Smotrakov -- potential timing attack on GOV.UK Pay Webhook signature checks
