--- a/thanks.txt
+++ b/thanks.txt
@@ -1,5 +1,6 @@
 # We would like to thank the following:
 # [yyyy-mm-dd] Name -- description
 
-[2020-02-11] Jonathan Leitschuh -- potential MITM using HTTP to resolve some GOV.UK Pay Maven dependencies
+[2022-01-17] Mohd.Danish Abid -- potential directory security misconfiguration on gdscareers.gov.uk
 [2021-07-21] Artem Smotrakov -- potential timing attack on GOV.UK Pay Webhook signature checks
+[2020-02-11] Jonathan Leitschuh -- potential MITM using HTTP to resolve some GOV.UK Pay Maven dependencies
