--- a/thanks.txt
+++ b/thanks.txt
@@ -1,6 +1,7 @@
 # We would like to thank the following:
 # [yyyy-mm-dd] Name -- description
 
+[2022-10-05] Souvik Kandar -- found a security misconfiguration for the civil service learning platform
 [2022-06-06] Tom Samson -- potential vulnerability to Log4j exploit in GOV.UK hosted application
 [2022-06-06] Michael Minchinton -- cached URLs linking to sensitive files on a GOV.UK service
 [2022-05-27] Ayush Juneja -- potential vulnerability with GOV.UK contact forms
