--- a/thanks.txt
+++ b/thanks.txt
@@ -1,7 +1,8 @@
 # We would like to thank the following:
 # [yyyy-mm-dd] Name -- description
 
-[2023-02-03] Mitchell Robson -- reported a sub-domain takeover vulnerability for the Civil Service Pension Scheme
+[2023-04-11] Sanjok Karki(thesanjok) -- reported a Sensitive Information Disclosure vulnerability to Cabinet Office
+[2023-02-03] Mitchell Robson -- reported a sub-domain takeover vulnerability for Cabinet Office services
 [2022-12-01] Corrie Sloot -- found DNS misconfiguration for Government Communication Services
 [2022-10-10] Ilie Alexandru -- reported a XSS vulnerability in a GOV.UK hosted site
 [2022-10-05] Souvik Kandar -- found a security misconfiguration for the civil service learning platform
