--- a/thanks.txt
+++ b/thanks.txt
@@ -1,6 +1,8 @@
 # We would like to thank the following:
 # [yyyy-mm-dd] Name -- description
 
+[2024-01-29] Jeewan Bhatta (itsjeewan) - reported a Cross-Site Request Forgery in a gov.uk service
+[2024-01-29] Jeewan Bhatta (itsjeewan) - reported a Insecure Direct Object Reference in a gov.uk service
 [2024-01-29] Boya Vamshi Krishna (bittu_vamshi_) - reported a Open Redirect vulnerability in a gov.uk service
 [2023-12-31] Sheyko Andrey (kennebecriver) - reported a sub-domain takeover vulnerability for Cabinet Office service
 [2023-12-28] Suvam Adhikari (WHOISshuvam) - identified improper authorization in a gov.uk development instance
