--- a/thanks.txt
+++ b/thanks.txt
@@ -1,6 +1,7 @@
 # We would like to thank the following:
 # [yyyy-mm-dd] Name -- description
 
+[2024-05-18] Dejaun Barker (exss) - reported a Subdomain Takeover vulnerability in a gov.uk service
 [2024-03-14] Miguel Segovia Gil (miguelse) - reported a Missing Rate-Limiting Control in a gov.uk service
 [2024-02-08] Sushmita Poudel (sushmita_poudel) - reported a Cross-Site Request Forgery in a gov.uk service
 [2024-01-29] Jeewan Bhatta (itsjeewan) - reported a Cross-Site Request Forgery in a gov.uk service
